Added the routes and models
